# AI-Video-Generation-Workflow

./: .gitignore  README.md  generate-image.py  generate-video.py  main.py  pyproject.toml  script.txt  voice-design-generate.py  voice-design.py  voice-generate.py
.backend-data/: metadata.db
.backend-data/projects/proj_46302f617284/: script.txt
backend/: __init__.py  main.py
backend/utils/: logger.py  settings.py
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  theme.ts
client/src/components/common/: ConfirmDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  MediaPreviewDialog.tsx  StatusChip.tsx  ToastProvider.tsx
client/src/components/projects/: CreateProjectModal.tsx  ProjectCard.tsx
client/src/components/tabs/: GenerateImagesTab.tsx  GenerateVideoTab.tsx  GenerateVoiceTab.tsx  OutputsTab.tsx  OverviewTab.tsx  ScriptTab.tsx  VoiceDesignTab.tsx
client/src/components/workspace/: WorkspaceLayout.tsx
client/src/pages/: ProjectsPage.tsx  WorkspacePage.tsx
client/src/services/: fileExport.ts  mockApi.ts  mockData.ts  scriptParser.ts  storage.ts  validation.test.ts  validation.ts
client/src/store/: AppContext.tsx
client/src/theme/: index.ts
client/src/types/: index.ts
client/src/utils/: outputStability.ts
scripts/: clear.py  generate-image.py  generate-video.py  voice-design.py  voice-generate.py
tests/: test_api_smoke.py
