[project]
name = "arabic-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.37.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "mlx>=0.31.1",
    "mlx-audio>=0.4.2",
    "torch>=2.11.0",
    "uvicorn[standard]>=0.30.0",
]
